--- a/home.html
+++ b/home.html
@@ -239,41 +239,61 @@
     <link rel="stylesheet" href="faq.css">
 </head>
 <body> -->
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="faq.css">
+</head>
+<body>
     <section class="faq">
         <h2>Frequently Asked Questions</h2>
         <div class="faqbox">
-            <span>What is NetFlix</span>
+            <span>Who can use this platform?</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-
+            <div class="answer">This platform is available to all users who register on the website.</div>
         </div>
         <div class="faqbox">
-            <span>How much does Netflix cost?</span>
+            <span>What types of courses do you offer?</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-
+            <div class="answer">We offer a variety of courses including programming, design, and business.</div>
         </div>
         <div class="faqbox">
-            <span>What can I watch on Netflix?</span>
+            <span>Are the courses free or paid?</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-
+            <div class="answer">We offer both free and paid courses depending on the content and level of expertise.</div>
         </div>
         <div class="faqbox">
-            <span>Where can I watch?</span>
+            <span>How do I register on the website?</span>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-
+            <div class="answer">You can register by clicking on the sign-up button and filling out the required information.</div>
+        </div>
+        <div class="faqbox">
+            <span>Can I access courses after completion?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <div class="answer">Yes, you can access completed courses anytime for review.</div>
         </div>
     </section>
+    <script src="faq.js"></script>
+</body>
+</html>
 <!-- </body> -->
 
 	<!-- footer -->
